--- a/src/scss/05_components/_components.modal.scss
+++ b/src/scss/05_components/_components.modal.scss
@@ -1,3 +1,5 @@
+@use "../01_tools/tools.breakpoints";
+
 $controlHeight: 4rem;
 
 .lia-modal {
@@ -55,7 +57,7 @@ $controlHeight: 4rem;
     width: 100%;
     z-index: 9001;
 
-    @include breakpoint('sm') {
+    @include tools.breakpoint('sm') {
       margin: 0;
       position: absolute;
       right: 1rem;
@@ -72,7 +74,7 @@ $controlHeight: 4rem;
     width: 100%;
     z-index: 9001;
 
-    @include breakpoint('sm') {
+    @include tools.breakpoint('sm') {
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
@@ -82,7 +84,7 @@ $controlHeight: 4rem;
   &__ctrl-next {
     right: 0;
 
-    @include breakpoint('sm') {
+    @include tools.breakpoint('sm') {
       right: 1rem;
     }
   }
@@ -90,7 +92,7 @@ $controlHeight: 4rem;
   &__ctrl-prev {
     left: 0rem;
 
-    @include breakpoint('sm') {
+    @include tools.breakpoint('sm') {
       left: 1rem;
     }
   }
@@ -110,7 +112,7 @@ $controlHeight: 4rem;
       display: none;
     }
 
-    @include breakpoint('sm') {
+    @include tools.breakpoint('sm') {
       margin: 1rem 6rem;
       max-width: 100vw;
       width: calc(100vw - (2 * 5rem));
@@ -176,7 +178,7 @@ $controlHeight: 4rem;
       min-height: 0;
       padding: 0 1rem;
 
-      @include breakpoint('sm') {
+      @include tools.breakpoint('sm') {
         padding: 0;
       }
     }
@@ -200,7 +202,7 @@ $controlHeight: 4rem;
     padding: 0;
     width: 100vw;
 
-    @include breakpoint('sm') {
+    @include tools.breakpoint('sm') {
       width: calc(100vw - (2 * 6rem));
     }
   }
