--- a/src/scss/05_components/_components.responsive-voice.scss
+++ b/src/scss/05_components/_components.responsive-voice.scss
@@ -1,3 +1,6 @@
+@use "../00_settings/settings.global";
+@use "../01_tools/tools.breakpoints";
+
 $responsive-voice-hight: 7rem;
 
 .lia-responsive-voice {
@@ -17,7 +20,7 @@ $responsive-voice-hight: 7rem;
     justify-content: space-between;
     width: 100%;
 
-    @include breakpoint("xs") {
+    @include tools.breakpoint("xs") {
       justify-content: flex-start;
       width: auto;
     }
@@ -31,15 +34,15 @@ $responsive-voice-hight: 7rem;
     background-color: rgb(var(--lia-anthracite));
   }
 
-  @include breakpoint("xs") {
+  @include tools.breakpoint("xs") {
     align-items: center;
     height: 7rem;
     flex-direction: row;
     padding: 0;
   }
 
-  @include breakpoint("md") {
-    border-top-left-radius: $global-radius;
-    border-top-right-radius: $global-radius;
+  @include tools.breakpoint("md") {
+    border-top-left-radius: settings.$global-radius;
+    border-top-right-radius: settings.$global-radius;
   }
 }
