--- a/src/scss/06_utilities/_utilities.hidden.scss
+++ b/src/scss/06_utilities/_utilities.hidden.scss
@@ -1,3 +1,7 @@
+@use "../00_settings/settings.global";
+@use "../01_tools/tools.hidden-visually";
+@use "../01_tools/tools.px-em-calc" as tools2;
+
 /* ==========================================================================
    #HIDE
    ========================================================================== */
@@ -8,7 +12,7 @@
  */
 
 .hidden-visually {
-  @include hidden-visually();
+  @include tools.hidden-visually();
 }
 
 /**
@@ -23,14 +27,14 @@
  * Hide visually and from screen readers at different breakpoints.
  */
 
-@each $bp-name, $bp in $global-breakpoints {
+@each $bp-name, $bp in settings.$global-breakpoints {
   @media (min-width: $bp) {
     .hide-#{$bp-name}-up {
       display: none !important;
     }
   }
 
-  $bp-adj: $bp - calc-em(1, 16);
+  $bp-adj: $bp - tools2.calc-em(1, 16);
   @media (max-width: $bp-adj) {
     .hide-#{$bp-name}-down {
       display: none !important;
