--- a/src/scss/01_tools/_tools.color.scss
+++ b/src/scss/01_tools/_tools.color.scss
@@ -1,31 +1,36 @@
+@use "sass:color";
+@use "sass:map";
+@use "sass:math";
+@use "tools.str-replace";
+
 // Calculeate brightness of a given color.
 @function brightness($color) {
   @return (
-      (red($color) * 0.299) + (green($color) * 0.587) + (blue($color) * 0.114)
+      (color.red($color) * 0.299) + (color.green($color) * 0.587) + (color.blue($color) * 0.114)
     ) / 255 * 100%;
 }
 
 // Compares contrast of a given color to the light/dark arguments and returns whichever is most "contrasty"
 @function color-contrast(
   $color,
-  $dark: map-get($theme, text),
-  $light: map-get($theme, text-inv)
+  $dark: map.get($theme, text),
+  $light: map.get($theme, text-inv)
 ) {
   $color-brightness: brightness($color);
   $light-text-brightness: brightness($light);
   $dark-text-brightness: brightness($dark);
 
   @return if(
-    abs($color-brightness - $light-text-brightness) >
-      abs($color-brightness - $dark-text-brightness),
+    math.abs($color-brightness - $light-text-brightness) >
+      math.abs($color-brightness - $dark-text-brightness),
     $light,
     $dark
   );
 }
 
 @function darkness($color, $darknessMultiplier) {
-  $color: str-replace($color, "var(");
-  $color: str-replace($color, ")");
+  $color: tools.str-replace($color, "var(");
+  $color: tools.str-replace($color, ")");
   $color-h: var(#{$color + "-h"});
   $color-s: var(#{$color + "-s"});
   $color-l: var(#{$color + "-l"});
