--- a/src/scss/01_tools/_tools.str-replace.scss
+++ b/src/scss/01_tools/_tools.str-replace.scss
@@ -1,11 +1,12 @@
+@use "sass:string";
 // replace substring with another string
 // credits: https://css-tricks.com/snippets/sass/str-replace-function/
 @function str-replace($string, $search, $replace: "") {
-  $index: str-index($string, $search);
+  $index: string.index($string, $search);
   @if $index {
-    @return str-slice($string, 1, $index - 1) + $replace +
+    @return string.slice($string, 1, $index - 1) + $replace +
       str-replace(
-        str-slice($string, $index + str-length($search)),
+        string.slice($string, $index + string.length($search)),
         $search,
         $replace
       );
