--- a/src/scss/03_elements/_elements.headline.scss
+++ b/src/scss/03_elements/_elements.headline.scss
@@ -1,3 +1,6 @@
+@use "../00_settings/settings.global";
+@use "../01_tools/tools.breakpoints";
+
 /* --------------------------------------------------
    Headline Settings
    -------------------------------------------------- */
@@ -26,20 +29,20 @@ $h4-mobile: 1.6rem;
 h1,
 h2,
 h3 {
-  font-family: $global-font-headline;
-  line-height: $global-line-height;
+  font-family: settings.$global-font-headline;
+  line-height: settings.$global-line-height;
 }
 
 h4,
 h5 {
-  font-family: $global-font-family;
+  font-family: settings.$global-font-family;
   line-height: 1.38;
 }
 
 h1 {
   font-size: calc(#{$h1-mobile} * var(--font-size-multiplier));
 
-  @include breakpoint("md") {
+  @include tools.breakpoint("md") {
     font-size: calc(#{$h1-desktop-presentation} * var(--font-size-multiplier));
 
     @at-root .lia-mode--textbook & {
@@ -51,7 +54,7 @@ h1 {
 h2 {
   font-size: calc(#{$h2-mobile} * var(--font-size-multiplier));
 
-  @include breakpoint("md") {
+  @include tools.breakpoint("md") {
     font-size: calc(#{$h2-desktop} * var(--font-size-multiplier));
   }
 }
@@ -59,7 +62,7 @@ h2 {
 h3 {
   font-size: calc(#{$h3-desktop} * var(--font-size-multiplier));
 
-  @include breakpoint("md") {
+  @include tools.breakpoint("md") {
     font-size: calc(#{$h3-desktop} * var(--font-size-multiplier));
   }
 }
