--- a/src/scss/05_components/_components.quiz.scss
+++ b/src/scss/05_components/_components.quiz.scss
@@ -1,3 +1,5 @@
+@use "../01_tools/tools.breakpoints";
+
 .lia-quiz {
   margin-bottom: 2rem;
 
@@ -22,7 +24,7 @@
       margin-right: 1rem;
     }
 
-    @include breakpoint('md') {
+    @include tools.breakpoint('md') {
       grid-column-start: 2;
     }
   }
