--- a/src/scss/05_components/_components.toc.scss
+++ b/src/scss/05_components/_components.toc.scss
@@ -1,15 +1,22 @@
+@use "sass:map";
+@use "../00_settings/settings.global";
+@use "../01_tools/tools.breakpoints";
+@use "../03_elements/elements.button";
+@use "../04_objects/object.canvas";
+@use "components.header";
+
 .lia-toc {
   background-color: rgb(var(--color-background));
-  border-right: $global-border;
+  border-right: settings.$global-border;
   display: flex;
   flex-direction: column;
   height: 100%;
   left: 0;
   padding: 3rem 0 1rem 0;
   position: fixed;
-  transition: $global-transition;
+  transition: settings.$global-transition;
   transition-property: left, width, transform;
-  width: $toc-width-mobile;
+  width: object.$toc-width-mobile;
   z-index: 200;
 
   #lia-btn-toc {
@@ -17,29 +24,29 @@
     font-size: 2rem;
     position: absolute;
     top: calc(
-      (#{$header-height-desktop} / 2) +
-        (2 * #{map-get($global-spacing, spacing-small)} - (#{$btn-height} / 4))
+      (#{components.$header-height-desktop} / 2) +
+        (2 * #{map.get(settings.$global-spacing, spacing-small)} - (#{elements.$btn-height} / 4))
     );
     right: 0;
     transform: translate(6.5rem, -50%);
-    transition: $global-transition;
+    transition: settings.$global-transition;
 
-    @include breakpoint("sm", "max") {
+    @include tools.breakpoint("sm", "max") {
       transform: translate(-3rem, -50%);
     }
 
-    @include breakpoint("md", "max") {
+    @include tools.breakpoint("md", "max") {
       top: calc(
-        (#{$header-height-mobile} / 2) +
+        (#{components.$header-height-mobile} / 2) +
           (
-            2 * #{map-get($global-spacing, spacing-small)} - (#{$btn-height} / 4)
+            2 * #{map.get(settings.$global-spacing, spacing-small)} - (#{elements.$btn-height} / 4)
           )
       );
     }
   }
 
-  @include breakpoint("sm") {
-    width: $toc-width-desktop;
+  @include tools.breakpoint("sm") {
+    width: object.$toc-width-desktop;
   }
 
   &--closed {
@@ -50,7 +57,7 @@
     }
   }
 
-  @include breakpoint("sm", "max") {
+  @include tools.breakpoint("sm", "max") {
     padding-top: 6rem;
   }
 
@@ -128,7 +135,7 @@
         &2 {
           font-weight: 600;
           font-size: calc(1.7rem * var(--font-size-multiplier));
-          padding-left: $global-font-size + 3rem;
+          padding-left: settings.$global-font-size + 3rem;
           position: relative;
 
           &:after {
@@ -144,19 +151,19 @@
         }
 
         &3 {
-          padding-left: 2 * $global-font-size + 3rem;
+          padding-left: 2 * settings.$global-font-size + 3rem;
         }
 
         &4 {
-          padding-left: 3 * $global-font-size + 3rem;
+          padding-left: 3 * settings.$global-font-size + 3rem;
         }
 
         &5 {
-          padding-left: 4 * $global-font-size + 3rem;
+          padding-left: 4 * settings.$global-font-size + 3rem;
         }
 
         &6 {
-          padding-left: 5 * $global-font-size + 3rem;
+          padding-left: 5 * settings.$global-font-size + 3rem;
         }
       }
     }
@@ -191,7 +198,7 @@ html:not([class*="lia-theme-default"]) {
     #lia-btn-toc {
       color: rgb(var(--lia-white));
 
-      @include breakpoint("sm") {
+      @include tools.breakpoint("sm") {
         color: rgb(var(--color-highlight));
       }
     }
