--- a/src/scss/06_utilities/_utilities.width.scss
+++ b/src/scss/06_utilities/_utilities.width.scss
@@ -1,3 +1,6 @@
+@use "../00_settings/settings.global";
+@use "../01_tools/tools.px-em-calc";
+
 .max-w-0 {
   max-width: 0;
 }
@@ -18,8 +21,8 @@
   max-width: 75%;
 }
 
-@each $bp, $bp-value in $global-breakpoints {
+@each $bp, $bp-value in settings.$global-breakpoints {
   .max-w-#{$bp} {
-    max-width: #{$bp-value - calc-em(1, 16)};
+    max-width: #{$bp-value - tools.calc-em(1, 16)};
   }
 }
