--- a/src/scss/dump.scss
+++ b/src/scss/dump.scss
@@ -1,10 +1,13 @@
+@use "sass:map";
+@use "00_settings/settings.global";
+
 /* --------------------------------------------------
    Dump for all CSS that has no particular function
    or meaning. Should be either refactored or trashed.
    -------------------------------------------------- */
 
 .lia-svg {
-  $horiz: map-get($global-spacing, spacing-normal);
+  $horiz: map.get(settings.$global-spacing, spacing-normal);
   padding-left: $horiz;
   padding-right: $horiz;
   overflow: auto;
