--- a/src/scss/03_elements/_elements.button.scss
+++ b/src/scss/03_elements/_elements.button.scss
@@ -1,4 +1,4 @@
-@use "../00_settings/settings.global";
+@use '../00_settings/settings.global';
 
 $btn-min-width: 3.6rem;
 $btn-height: 3.6rem;
@@ -39,6 +39,12 @@ $btn-height: 3.6rem;
 
   &--tag {
     border-radius: 0;
+  }
+
+  &--small-tag {
+    border-radius: 0;
+    font-size: x-small;
+    padding: 0.2rem 0.4rem;
   }
 
   &--outline {
