--- a/src/scss/03_elements/_elements.button.scss
+++ b/src/scss/03_elements/_elements.button.scss
@@ -43,7 +43,7 @@ $btn-height: 3.6rem;
 
   &--small-tag {
     border-radius: 0;
-    font-size: x-small;
+    font-size: small;
     padding: 0.2rem 0.4rem;
   }
 
