--- a/src/scss/05_components/_components.card.scss
+++ b/src/scss/05_components/_components.card.scss
@@ -2,16 +2,12 @@
 
 .lia-card {
   background-color: rgb(var(--color-background));
-  border: 3px solid rgb(var(--color-highlight));
+  border: 0.4rem solid rgb(var(--color-highlight));
   display: flex;
   flex-direction: column;
   position: relative;
   color: rgb(var(--color-text));
   margin-top: 2rem;
-
-  &:hover {
-    box-shadow: 0 0 2rem 0 rgba(0, 0, 0, 0.3);
-  }
 
   &__media {
     @media (max-width: 240px) {
@@ -20,17 +16,20 @@
   }
 
   &__logo {
-    height: 4rem;
+    height: 3rem;
     object-fit: cover;
-    max-width: 5rem;
-    margin-right: 1rem;
+    width: 3rem;
+    position: absolute;
+    right: 0.5rem;
+    top: 0.5rem;
+    border-radius: 50%;
   }
 
   &__content {
     display: flex;
     flex-direction: column;
     height: 100%;
-    padding: 2rem 0;
+    padding: 2rem 0 1rem 0;
 
     @include tools.breakpoint-only('sm', 'md') {
       margin-top: 4rem;
@@ -46,8 +45,8 @@
 
   &__version {
     position: absolute;
-    right: 2.4rem;
-    top: -1px;
+    left: 1rem;
+    top: -1rem;
 
     > *:not(:last-child) {
       margin-right: 1rem;
@@ -80,7 +79,7 @@
   &__controls {
     display: flex;
     justify-content: center;
-    margin: auto 2.4rem 2rem;
+    margin: auto 2.4rem 1rem;
     font-size: 1.8rem;
 
     @media (max-width: 240px) {
@@ -89,10 +88,18 @@
 
     > *:not(:last-child) {
       margin-right: 1rem;
+
+      &:hover {
+        box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
+      }
     }
 
     > *:last-child {
       margin-left: auto;
+
+      &:hover {
+        box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
+      }
     }
   }
 
@@ -103,7 +110,7 @@
 
   &__body {
     padding: 0 2.4rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 
     @media (max-width: 240px) {
       hyphens: auto;
@@ -111,16 +118,11 @@
     }
   }
 
-  &__copy {
-    //
-  }
-
   &__footer {
     align-items: center;
     display: flex;
     justify-content: space-between;
     padding: 0 2.4rem;
-    max-height: 5rem;
 
     @media (max-width: 240px) {
       display: none;
@@ -128,8 +130,9 @@
   }
 
   &__contact {
-    color: #399193;
+    color: grey;
     text-decoration: none;
+    font-size: small;
 
     i {
       font-size: 2rem;
